Changes from 0.3.1 to 0.3.2
- support for screensaver detection
- support for mime file type detection

Changes from 0.3.0 to 0.3.1
- fixes for mingw32 builds

Changes from 0.2.2 to 0.3.0
- dbus and generic notification support in api
- very basic coastal-notify to test notifications

Changes from 0.2.1 to 0.2.2
- expanded coastal api

Changes from 0.2.0 to 0.2.1
- fix html support in coastal
- fix icon appearences
- right-click app menu support
- search gets top menu, manpager gets toolbar

Changes from 0.1.2 to 0.2.0
- no longer separate unreleased
- will include release of coastal-search

Changes from 0.1.1 to 0.1.2
- rpm spec file

Changes from 0.1.0 to 0.1.1
- pc config file added
- desktop file generated from configure
- more manpage parsing formats supported

