@@ -46,8 +46,22 @@ else()
     set(TRANSLATIONS share/coastal-qt/translations)
 endif()
 
+if(WIN32 OR APPLE)
+    set(COASTAL_LIBRARY_TYPE "STATIC")
+else()
+    set(COASTAL_LIBRARY_TYPE "SHARED")
+endif()
+
 if(FRAMEWORKS_PREFIX AND WIN32)
-    install(FILES ${FRAMEWORKS_PREFIX}/share/misc/magic.mgc DESTINATION ${INSTALL_BINDIR}/magic.mgc)
+    option(BUILD_RUNTIME "Set to ON to build runtime" OFF)
+    if(BUILD_RUNTIME)
+        set(COASTAL_LIBRARY_TYPE "SHARED")
+        set(RUNTIME_MAGIC "${INSTALL_PREFIX}")
+        install(FILES ${FRAMEWORKS_PREFIX}/share/misc/magic.mgc DESTINATION magic.mgc)
+    else()
+        set(RUNTIME_MAGIC "${INSTALL_PREFIX}/${INSTALL_BINDIR}/magic.mgc")
+        install(FILES ${FRAMEWORKS_PREFIX}/share/misc/magic.mgc DESTINATION ${INSTALL_BINDIR}/magic.mgc)
+    endif()
 endif()
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/common")
